add more parts (collections, generics etc etc)